--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
   <body>
     <div class="grid-container">
       <div class="grid-x grid-padding-x">
-        <div class="large-12 cell">
-          <h1>Welcome to Foundation</h1>
+        <div class="large-12 cell" id="header">
+            <img src="images/hoodLogo.png" alt="myBank" />
+            <h1>MyBank</h1>
         </div>
       </div>
 
